test-suite/parser/pass/function_no_params.first
function f() -> Int { return 0; }
