test-suite/parser/fail/missing_arrow_return.first
function f() Int { return 42; }
